--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    class="com.hfad.workout.WorkoutListFragment"
+    android:id="@+id/detail_frag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context="com.hfad.workout.MainActivity">
-
-
+    class="com.hfad.workout.WorkoutDetailFragment"
+    tools:context="com.hfad.workout.DetailActivity">
 
 </fragment>
